# aa-fitting-mastery

./: .coveragerc  .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  runtests.py  tox.ini
.github/workflows/: publish.yml
docs/: _0_2_2_analysis.md  _0_2_2_optimisations.md  secure_groups_integration.md
mastery/: __init__.py  admin.py  api.py  app_settings.py  apps.py  auth_hooks.py  secure_groups.py  tasks.py  urls.py  views.py
mastery/management/commands/: import_sde_masteries.py
mastery/migrations/: 0001_initial.py  0002_doctrineskillsetgroupmap_default_mastery_level_and_more.py  0003_make_fitting_mastery_override_nullable.py  0004_fittingskillcontrol_recommended_level_override.py  0005_fittingskillsetmap_last_synced_at.py  0006_fittingskillcontrol_is_manual.py  0007_general.py  0008_summary_audience_groups.py  0009_fittingskillsetmap_approval_workflow.py  0010_remove_fittingskilloverride.py  0011_create_skill_plan_progression_models.py  0011_priority_fields.py  0012_masterydoctrinereadinessfilter_and_more.py  0013_masterydoctrinereadinessfilter_alliances_and_more.py  0014_sdeclonegradeskill.py
mastery/models/: __init__.py  certificate_skill.py  doctrine_skill_snapshot.py  doctrine_skillsetgroup_map.py  fitting_skill_control.py  fitting_skill_override.py  fitting_skillset_map.py  general.py  sde_clone_grade_skill.py  sde_version.py  ship_mastery.py  ship_mastery_certificate.py  skill_plan_progression.py  summary_group.py
mastery/services/: skill_requirements.py  summary_cache.py
mastery/services/doctrine/: __init__.py  doctrine_map_service.py  doctrine_skill_service.py
mastery/services/fittings/: __init__.py  approval_service.py  fitting_map_service.py  skill_extractor.py
mastery/services/pilots/: __init__.py  pilot_access_service.py  pilot_progress_service.py  status_buckets.py
mastery/services/progressions/: __init__.py  progression_service.py
mastery/services/sde/: __init__.py  clone_grade_service.py  importer.py  mastery_service.py  version_service.py
mastery/services/skills/: __init__.py  skill_control_service.py  skillcheck_service.py  suggestion_service.py
mastery/templates/mastery/: base.html  doctrine_detail.html  doctrine_list.html  fitting_skills.html  (+7 more)
mastery/templatetags/: skill_render.py
mastery/tests/: test_api.py  test_auth_hooks.py  test_common_helpers_extra.py  test_model_labels.py  test_pilot_progress_service.py  test_pilot_progress_service_lot3.py  test_refactor_helpers.py  test_sde_importer_and_command.py  test_secure_groups.py  test_services.py  test_tasks.py  test_views.py
mastery/views/: __init__.py  common.py  deps.py  doctrine.py  fitting.py  pilot.py  progression.py  progression_editor.py  summary.py  summary_helpers.py
testauth/: celery.py  urls.py
testauth/settings_aa4/: base.py  local.py
(+25 files in other folders)
